Fix report landing mobile overflow-x fuckup.

--- a/app/webroot/assets/css/base.css
+++ b/app/webroot/assets/css/base.css
@@ -1172,6 +1172,9 @@ a:focus {
 
 /* Report Landing Page
 ---------------------------------------------------------------- */
+.report-landing > div {
+  overflow: hidden;
+}
 .report-landing__title {
   text-align: center;
   margin-bottom: 80px;
